@@ -15,7 +15,7 @@ public:
   bool m_bUserInputCleanup;
   bool m_bHideInputChars;
   static bool ShowAndGetInput(CStdString& aTextString, const CStdString& dlgHeading, bool bHideUserInput);
-  static bool ShowAndGetNewPassword(CStdString& strNewPassword);
+  static bool ShowAndVerifyNewPassword(CStdString& strNewPassword);
   static int ShowAndVerifyPassword(CStdString& strPassword, const CStdString& dlgHeading, int iRetries);
   static bool ShowAndVerifyInput(CStdString& strPassword, const CStdString& dlgHeading, const CStdString& dlgLine0, const CStdString& dlgLine1, const CStdString& dlgLine2, bool bGetUserInput, bool bHideInputChars);
 protected:
